---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Test reading messages
    - Update the text of the message
    - Only evaluate a message if the text is nil or number
    - See what would happen if you tried to edit it while the gui is open
    - Draft up code to support being conditionally selected by players
    - Change how i deal with selected structs
    - Constantly update while a player has the gui open
    - Cache always_show and show_in_chart
    - Doesn't really make sense to check upon selection end
    - Do not update when the gui is open and no one has alt mode on
    - Ignore cached always_show while you have the gui open
    - Keep track of which surfaces have players looking at them
    - Only tick structs on observed surfaces
    - Drop compatibility with earlier development versions of this mod
    - Make it clear storage.observed_surfaces exists, even though it gets reset on the next line
    - Ensure storage.alt_mode is always populated with booleans
    - Move the surface populator to a handler too
    - Convert storage.structs_on_surface to storage.surfacedata
    - Update structs that show in chart every tick
    - Cleanup comments
    - Cleanup the struct when the display panel deathrattles
    - Tick the display panels when selected/opened again
    - Track which players are viewing a surface with alt mode
    - Only update surface wide display panels in always_show mode
    - Document performance
    - Fix adding this mod to worlds with existing display panels
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 13
  Info:
    - Initial commit